# boxdrop

./: Cargo.toml  Cross.toml  LICENSE  README.md
.cursor/rules/: create-prd.mdc  generate-tasks-from-prd.mdc  process-tw.mdc  translate-tasks-to-taskwarrior.mdc
.github/workflows/: build.yml  test.yml
src/: lib.rs  main.rs
src/config/: manager.rs  mod.rs
src/conflict/: backup.rs  mod.rs  resolver.rs
src/dropbox/: client.rs  mod.rs  operations.rs
src/service/: daemon.rs  installer.rs  mod.rs
src/sync/: engine.rs  mod.rs
src/ui/: mod.rs  notifications.rs  progress.rs  tui.rs
src/utils/: cli.rs  logging.rs  mod.rs  timestamps.rs
tasks/: TASKS-prd-dropbox-sync-daemon.md  prd-dropbox-sync-daemon.md
