[package]
name = "boxdrop-sync-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Bugs <bugs@boxdrop.dev>"]
description = "A fool-proof Dropbox synchronization daemon that preserves original timestamps"
license = "MIT"

[dependencies]
# HTTP client with rustls for cross-compilation compatibility
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Configuration management
config = "0.14"
dirs = "5.0"

# File system operations
notify = "6.1"
walkdir = "2.4"

# CLI and TUI
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27"
tui = "0.19"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time and date handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing for conflict detection
sha2 = "0.10"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies
libc = "0.2"
inotify = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

# Cross-compilation configuration
[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"] 